src/main/java/syntactic/test/passing/selfAccess.ru
impl A {
	fn getX() -> Int {
		ret self.x;
	}
}

start {
}



/? CORRECTO: ANALISIS SINTACTICO