src/main/java/syntactic/test/failing/constructorWithReturn.ru
impl A {
    .() -> int {
        ret 0;
    }
}
start{}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 9 | Se esperaba [OPEN_CURLY] pero se encontró ARROW: -> |